--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     // google.services.json file in the app folder. After syncing the changes, you should be able
     // to send a notification to your app using the Firebase console. The app must be in the
     // background!
-
+    compile 'com.google.firebase:firebase-messaging:11.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
